before chaning match interface

--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -82,9 +82,8 @@ is installed</a>, get Lepl using the command:</p>
           </div>
           <div id="col2" class="yui-u">
 
-<p class="warn">Be careful with Python 3: both setuptools and
-distribute provide a command called easy_install, but only distribute
-works correctly.</p>
+<p class="warn">Be careful with Python 3: setuptools and distribute both
+provide a command called easy_install, but only distribute works correctly.</p>
 
           </div>
         </div>
