--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -23,9 +23,10 @@ var stopStart;
       </div>
       <div id="hd-right" class="yui-u">
 
-<p>A recursive descent parser for Python 2.6+.  Lepl is simple to use and
-easy to extend: grammars are written directly as Python code, using a 
-syntax similar to BNF; new matchers can be simple functions.</p>
+<p>A recursive descent parser for Python 2.6+ (including 3!).  
+Lepl is simple to use and easy to extend: grammars are written directly 
+as Python code, using a syntax similar to BNF; new matchers can be 
+simple functions.</p>
 
       </div>
     </div></div></div>
