--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -19,7 +19,7 @@ var stopStart;
   <div id="doc4">
     <div id="hd"><div class="yui-b"><div class="yui-gd">
       <div id="hd-left" class="yui-u first">
-<h1>LEPL 4.0</h1>
+<h1>Lepl 4.0</h1>
       </div>
       <div id="hd-right" class="yui-u">
 
@@ -37,22 +37,28 @@ simple functions.</p>
 <div class="item">
 <h2>Resources</h2>
 
-<p>Documentation and support can be found via these links.  I can also
-provide paid support.</p>
+<p>Documentation, including a manual and tutorial, can be found via 
+these links.  I can also provide paid support.</p>
 
 <ul>
-<li>Manual</li>
-<li>Tutorial</li>
-<li>API</li>
+<li><a href="lepl4.0.html">What's new in 4?</a></li>
 </ul>
-
 <ul>
-<li>Licence</li>
-<li>Download</li>
-<li>Mailing list</li>
-<li>Bugs</li>
+<li><a href="intro-1.html">Tutorial</a></li>
+<li><a href="manual.html">Manual</a></li>
+<li><a href="api/index.html">API</a> 
+(<a href="api/identifier-index.html">Index</a>)</li>
 </ul>
-
+<ul>
+<li><a href="">Licence</a></li>
+<li><a href="">Download</a></li>
+<li><a href="">Mailing List</a></li>
+<li><a href="">Bugs</a></li>
+</ul>
+<ul>
+<li><a href="contents.html">Full Contents</a></li>
+<li><a href="genindex.html">Index</a></li>
+</ul>
 </div>
 
       </div>
@@ -95,7 +101,7 @@ provide a command called easy_install, but only distribute works correctly.</p>
     </div></div>
     <div id="ft">
 <p>Everything here my own work, unless attributed otherwise, 
-(c) 2009-2010 <a href="mailto:andrew@acooke.org">Andrew Cooke</a>.</p>
+(c) 2009-2010 <a href="..">Andrew Cooke</a>.</p>
     </div>
   </div>
   <script>
