tweaks to index page

--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -50,10 +50,8 @@ these links.  I can also provide paid support.</p>
 (<a href="api/identifier-index.html">Index</a>)</li>
 </ul>
 <ul>
-<li><a href="">Licence</a></li>
-<li><a href="">Download</a></li>
-<li><a href="">Mailing List</a></li>
-<li><a href="">Bugs</a></li>
+<li><a href="http://groups.google.com/group/lepl">Mailing List</a></li>
+<li><a href="licence.html">Licence</a></li>
 </ul>
 <ul>
 <li><a href="contents.html">Full Contents</a></li>
