adding lists + doc

--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -51,11 +51,12 @@ these links.  I can also provide paid support.</p>
 </ul>
 <ul>
 <li><a href="http://groups.google.com/group/lepl">Mailing List</a></li>
+<li><a href="http://code.google.com/p/lepl/source/list">Source</a></li>
 <li><a href="licence.html">Licence</a></li>
 </ul>
 <ul>
-<li><a href="contents.html">Full Contents</a></li>
-<li><a href="genindex.html">Index</a></li>
+<li><a href="contents.html">Full Contents</a> 
+(<a href="genindex.html">Index</a>)</li>
 </ul>
 </div>
 
