--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -24,8 +24,8 @@ var stopStart;
       <div id="hd-right" class="yui-u">
 
 <p>A recursive descent parser for Python 2.6+ (including 3!).  
-Lepl is simple to use and easy to extend: grammars are written directly 
-as Python code, using a syntax similar to BNF; new matchers can be 
+Lepl is powerful, simple to use, and easy to extend: grammars are written 
+directly as Python code, using a syntax similar to BNF; new matchers can be 
 simple functions.</p>
 
       </div>
@@ -34,14 +34,11 @@ simple functions.</p>
     <div id="hd"><div class="yui-b"><div class="yui-gd">
       <div id="left" class="yui-u first">
 
-<div class="item">
 <h2>Resources</h2>
-
-<p>Documentation, including a manual and tutorial, can be found via 
-these links.  I can also provide paid support.</p>
 
 <ul>
 <li><a href="lepl4.0.html">What's new in 4?</a></li>
+<li><a href="features.html">Features</a></li>
 </ul>
 <ul>
 <li><a href="intro-1.html">Tutorial</a></li>
@@ -58,7 +55,6 @@ these links.  I can also provide paid support.</p>
 <li><a href="contents.html">Full Contents</a> 
 (<a href="genindex.html">Index</a>)</li>
 </ul>
-</div>
 
       </div>
       <div class="yui-u">
@@ -68,22 +64,16 @@ these links.  I can also provide paid support.</p>
     </div></div></div>
 
 
-    <div id="yui-main"><div class="yui-b">
-      <div class="yui-gd">
+    <div id="yui-main""><div class="yui-b">
+      <div class="yui-gd install">
         <div id="bd" class="yui-g">
           <div id="col1" class="yui-u first">
 
-<div class="item">
-<h2>Install</h2>
-
-<p>The simplest way to install LEPL is with 
-<a href="http://pypi.python.org/pypi/distribute">distribute</a>.  Once
-<a href="http://pypi.python.org/pypi/distribute#installation-instructions">distribute 
-is installed</a>, get Lepl using the command:</p>
-
-<pre>easy_install lepl</pre>
-
-</div>
+<p>The <code>easy_install</code> command is provided by the
+<a href="http://pypi.python.org/pypi/distribute">distribute</a>  package.
+Please see distribute's 
+<a href="http://pypi.python.org/pypi/distribute#installation-instructions">installation
+instructions</a>.</p>
 
           </div>
           <div id="col2" class="yui-u">
@@ -94,6 +84,11 @@ provide a command called easy_install, but only distribute works correctly.</p>
           </div>
         </div>
         <div id="left" class="yui-u first">
+
+<h2>Installation</h2>
+<pre>
+&gt; easy_install lepl
+</pre>
 
         </div>
       </div>
