more docs (inc config example)

--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -43,6 +43,7 @@ simple functions.</p>
 <ul>
 <li><a href="intro-1.html">Tutorial</a></li>
 <li><a href="manual.html">Manual</a></li>
+<li><a href="support.html">Support</a></li>
 <li><a href="api/index.html">API</a> 
 (<a href="api/identifier-index.html">Index</a>)</li>
 </ul>
