must use non-binding groups with lepl regexps

--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -44,7 +44,7 @@ simple functions.</p>
 <li><a href="intro-1.html">Tutorial</a></li>
 <li><a href="manual.html">Manual</a></li>
 <li><a href="applications.html">Applications</a></li>
-<li><a href="support.html">Support</a></li>
+<li><a href="support.html">Support</a> (<a href="faq.html">FAQ</a>)</li>
 <li><a href="api/index.html">API</a> 
 (<a href="api/identifier-index.html">Index</a>)</li>
 </ul>
